--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ nav a {
 .header {
   color: white;
   height: 436px;
-  background-image: url("/images/city-scape.svg");
+  background-image: url("./images/city-scape.svg");
   position: 0 0;
   background-repeat: no-repeat;
   background-size: cover;
@@ -168,7 +168,7 @@ nav a {
 .whatis{
   color: white;
   height: 510px;
-  background-image: url("/images/forklift.svg");
+  background-image: url("./images/forklift.svg");
   position: 0 0;
   background-repeat: no-repeat;
   background-size: cover;
